[package]
name = "atomx"
version = "0.1.1"
authors = ["Peter Hahlweg <peter.github@mailbox.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://crates.io"
repository = "https://github.com/PeterHahlweg/atomx"
keywords = ["parallel", "thread", "concurrency", "atomic"]
categories = ["concurrency"]
readme = "README.md"
description = "Thread safe data structures based on atomic data types."

[dependencies]
haphazard = { git = "https://github.com/jonhoo/haphazard", rev = "6bcebbd" }

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[profile.release]
debug = true  # inserts debug symbols in release builds