[package]
name = "atomx"
version = "0.2.0"
authors = ["Peter Hahlweg <peter.github@mailbox.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://crates.io"
repository = "https://github.com/PeterHahlweg/atomx"
keywords = ["parallel", "thread", "concurrency", "atomic"]
categories = ["concurrency"]
readme = "README.md"
description = "Thread safe data structures based on atomic data types."

[dependencies]
haphazard = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hazard_pointer_allocation"
harness = false
[[bench]]
name = "signal_stress"
harness = false

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[profile.release]
debug = true  # inserts debug symbols in release builds